# karma-lm

./: .gitignore  CMakeLists.txt  README.md
include/: karma.h  karma_config.h
src/: karma_hash.c  karma_memory.c  karma_model.c  karma_rng.c  karma_tensor.c  main.c
tests/: test_memory.c
